--- a/mypy.ini
+++ b/mypy.ini
@@ -1,6 +1,9 @@
+[mypy]
+ignore_missing_imports = True
+
 [mypy-generator.*]
 ignore_missing_imports = True
-install_types = True
+
 [mypy-seaborn.*]
 ignore_missing_imports = True
 
@@ -11,8 +14,8 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 
 [mypy-joblib.*]
-
 ignore_missing_imports = True
+
 [mypy-discriminator.*]
 ignore_missing_imports = True
 
